Update translatable texts
[skip ci]

--- a/po/main/de.po
+++ b/po/main/de.po
@@ -1,7 +1,7 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # C E <githubce@eiselt.ch>, 2020
 # Nikolai Bohl <n.kay01@gmail.com>, 2020
@@ -12,7 +12,7 @@
 # Simon W., 2021
 # Nils Briggen, 2022
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.7.0Beta1\n"
@@ -165,7 +165,7 @@ msgstr "Schwerer Fehler beim Speichern des Zustands"
 #. Warning message
 #: sabnzbd/__init__.py
 msgid "Restarting because of crashed postprocessor"
-msgstr "Neustart aufgrund eines abgestürzten Postprocessors"
+msgstr "Neustart aufgrund eines abgestürzten Nachbearbeitungsprozesses"
 
 #. Warning message
 #: sabnzbd/__init__.py
@@ -175,7 +175,7 @@ msgstr "Neustart aufgrund eines abgestürzten Downloaders"
 #. Warning message
 #: sabnzbd/__init__.py
 msgid "Restarting because of crashed decoder"
-msgstr "Neustart aufgrund eines abgestürzten Dekoders"
+msgstr "Neustart aufgrund eines abgestürzten Decoders"
 
 #. Warning message
 #: sabnzbd/__init__.py
@@ -396,14 +396,15 @@ msgstr "Unbekannter Fehler %s beim Dekodieren"
 #: sabnzbd/deobfuscate_filenames.py
 msgid "Deobfuscate skipped due to DVD/Bluray directories"
 msgstr ""
+"Entschleiern wird aufgrund von DVD/Blu-ray-Verzeichnissen übersprungen"
 
 #: sabnzbd/deobfuscate_filenames.py
 msgid "Deobfuscate corrected the extension of %d file(s)"
-msgstr ""
+msgstr "Entschleiern korrigierte die Erweiterung von %d Datei(en)"
 
 #: sabnzbd/deobfuscate_filenames.py
 msgid "Deobfuscate renamed %d file(s)"
-msgstr ""
+msgstr "Entschleiern hat %dDatei(en) umbenannt"
 
 #: sabnzbd/directunpacker.py, sabnzbd/skintext.py
 msgid "Direct Unpack"
@@ -471,7 +472,7 @@ msgstr "Server %s wird für %s Minuten ignoriert"
 #. Warning message
 #: sabnzbd/downloader.py
 msgid "There are no active servers!"
-msgstr ""
+msgstr "Es gibt keine aktiven Server!"
 
 #. Error message
 #: sabnzbd/downloader.py
@@ -515,7 +516,7 @@ msgstr "Server %s läuft in %s Tag(en) ab"
 #. Warning message
 #: sabnzbd/downloader.py
 msgid "Server %s has used the specified quota"
-msgstr "Server %s hat die angegebene Quote verbraucht"
+msgstr "Server %s hat das angegebene Kontingent verbraucht"
 
 #: sabnzbd/emailer.py
 msgid "Failed to connect to mail server"
@@ -646,11 +647,13 @@ msgid ""
 "%s is not writable with special character filenames. This can cause "
 "problems."
 msgstr ""
+"Dateinamen mit Umlaute können nicht in %s gespeichert werden. Dies kann zu "
+"Problemen führen."
 
 #. Warning message
 #: sabnzbd/filesystem.py
 msgid "%s is not writable at all. This blocks downloads."
-msgstr ""
+msgstr "%s ist nicht beschreibbar. Downloads sind dadurch blockiert."
 
 #: sabnzbd/interface.py
 msgid "Refused connection from:"
@@ -705,7 +708,7 @@ msgstr ""
 
 #: sabnzbd/interface.py
 msgid "Invalid backup archive"
-msgstr ""
+msgstr "Invalides Backup Archiv"
 
 #: sabnzbd/interface.py
 msgid "Warning: LOCALHOST is ambiguous, use numerical IP-address."
@@ -1131,12 +1134,12 @@ msgstr "Senden von macOS Benachrichtigung fehlgeschlagen"
 #. Warning message
 #: sabnzbd/notifier.py
 msgid "Failed to send Prowl message"
-msgstr "Konnte Prowl-Nachricht nicht versenden"
+msgstr "Prowl-Nachricht konnte nicht versendet werden"
 
 #. Error message
 #: sabnzbd/notifier.py
 msgid "Bad response from Pushover (%s): %s"
-msgstr "Fehlerhafte Antwort von Pushbullet (%s): %s"
+msgstr "Fehlerhafte Antwort von Pushover (%s): %s"
 
 #. Error message - Warning message
 #: sabnzbd/notifier.py
@@ -1151,7 +1154,7 @@ msgstr "Fehlerhafte Antwort von Pushbullet (%s): %s"
 #. Warning message
 #: sabnzbd/notifier.py
 msgid "Failed to send pushbullet message"
-msgstr "Konnte Pushbullet-Nachricht nicht versenden"
+msgstr "Pushbullet-Nachricht konnte nicht versendet werden"
 
 #. Error message
 #: sabnzbd/notifier.py
@@ -1203,7 +1206,7 @@ msgstr "NZB zur Warteschlange hinzugefügt"
 #. Warning message
 #: sabnzbd/nzbstuff.py
 msgid "Invalid NZB file %s, skipping (error: %s)"
-msgstr "Ungültige NZB-Datei %s wird übersprungen: %s "
+msgstr "Ungültige NZB-Datei %s wird übersprungen (Fehler: %s)"
 
 #. Warning message
 #: sabnzbd/nzbstuff.py, sabnzbd/urlgrabber.py
@@ -1804,7 +1807,7 @@ msgstr "Entpacken"
 #. PP phase "deobfuscate"
 #: sabnzbd/skintext.py
 msgid "Deobfuscate"
-msgstr ""
+msgstr "Entschleiern"
 
 #. PP phase "script" - Notification Script settings
 #: sabnzbd/skintext.py
@@ -2264,7 +2267,7 @@ msgstr "Erzwingen"
 #. Priority pick list
 #: sabnzbd/skintext.py
 msgid "Stop"
-msgstr "Anhalten"
+msgstr "Abbrechen"
 
 #. Add NZB Dialog
 #: sabnzbd/skintext.py
@@ -2509,19 +2512,19 @@ msgstr "DNS-Server"
 
 #: sabnzbd/skintext.py
 msgid "Download speed limited by"
-msgstr ""
+msgstr "Downloadgeschwindigkeit begrenzt durch"
 
 #: sabnzbd/skintext.py
 msgid "CPU"
-msgstr ""
+msgstr "CPU"
 
 #: sabnzbd/skintext.py
 msgid "Disk speed"
-msgstr ""
+msgstr "Festplattengeschwindigkeit"
 
 #: sabnzbd/skintext.py
 msgid "System load"
-msgstr ""
+msgstr "Systemlast"
 
 #. Do not translate Pystone
 #: sabnzbd/skintext.py
@@ -2743,7 +2746,7 @@ msgid ""
 "Modern web browsers and other clients will not accept self-signed "
 "certificates and will give a warning and/or won't connect at all."
 msgstr ""
-"Moderne Webbrowser und andere Clients akzeptieren keine selbstsignierten "
+"Moderne Webbrowser und andere Clients akzeptieren keine selbst signierten "
 "Zertifikate und geben eine Warnung aus und/oder stellen gar keine Verbindung"
 " her."
 
@@ -2832,7 +2835,7 @@ msgstr ""
 #. Config->Scheduling
 #: sabnzbd/skintext.py
 msgid "Create backup"
-msgstr ""
+msgstr "Backup erstellen"
 
 #: sabnzbd/skintext.py
 msgid ""
@@ -2841,6 +2844,11 @@ msgid ""
 "the Completed Download Folder.<br>Recurring backups can be configured on the"
 " Scheduling page."
 msgstr ""
+"Erstelle eine Sicherungskopie der Konfigurationsdatei und der Datenbanken im"
+" Backup-Ordner.<br>Wenn der Backup-Ordner nicht festgelegt ist, wird die "
+"Sicherungskopie im Ordner der abgeschlossenen Downloads "
+"erstellt.<br>Wiederkehrende Sicherungen können auf der Seite Planung "
+"konfiguriert werden."
 
 #: sabnzbd/skintext.py
 msgid "Cleanup List"
@@ -2949,7 +2957,8 @@ msgstr "Externer Internetzugriff"
 #: sabnzbd/skintext.py
 msgid "You can set access rights for systems outside your local network."
 msgstr ""
-"Du kannst Zugriffsrechte für Systeme ausserhalb deines Netzwerkes setzen."
+"Es können Zugriffsrechte für Systeme außerhalb des Netzwerkes gesetzt "
+"werden."
 
 #: sabnzbd/skintext.py
 msgid "No access"
@@ -3031,12 +3040,12 @@ msgstr ""
 
 #: sabnzbd/skintext.py
 msgid "Minimum Free Space for Completed Download Folder"
-msgstr "Minimaler freier Speicherplatz im Download Ordner"
+msgstr "Minimaler freier Speicherplatz des abgeschlossene Downloads-Ordners"
 
 #: sabnzbd/skintext.py
 msgid "Will not work if a category folder is on a different disk."
 msgstr ""
-"Funktioniert nicht, wenn sich der Kategorie Ordner auf einer anderen "
+"Funktioniert nicht, wenn sich der Kategorie-Ordner auf einer anderen "
 "Festplatte befindet."
 
 #. Auto-resume download on the reset day
@@ -3050,9 +3059,10 @@ msgid ""
 " again.<br />Applies to both the Temporary and Complete Download Folder.<br "
 "/>Checked every few minutes."
 msgstr ""
-"Das Herunterladen wird automatisch fortgesetzt, wenn der minimale freie Speicherplatz wieder verfügbar ist. <br />\n"
-"Gilt sowohl für den temporären als auch für den Download Ordner.<br />\n"
-"Wird alle paar Minuten überprüft."
+"Das Herunterladen wird automatisch fortgesetzt, wenn der minimale freie "
+"Speicherplatz wieder verfügbar ist.<br />Gilt sowohl für den temporären als "
+"auch für den abgeschlossene Downloads-Ordner.<br />Dies wird alle paar "
+"Minuten überprüft."
 
 #: sabnzbd/skintext.py
 msgid "Permissions for completed downloads"
@@ -3131,7 +3141,7 @@ msgstr ""
 
 #: sabnzbd/skintext.py
 msgid "Backup Folder"
-msgstr ""
+msgstr "Backup Ordner"
 
 #: sabnzbd/skintext.py
 msgid ""
@@ -3139,6 +3149,9 @@ msgid ""
 "stored.<br />If left empty, the backup will be created in the Completed "
 "Download Folder."
 msgstr ""
+"Pfad, an dem die Sicherungen der Konfigurationsdatei und der Datenbanken "
+"gespeichert werden.<br />Wenn diese Option leer bleibt, wird die Sicherung "
+"im Ordner der abgeschlossenen Downloads erstellt."
 
 #: sabnzbd/skintext.py
 msgid "<i>Data will <b>not</b> be moved. Requires SABnzbd restart!</i>"
@@ -3221,7 +3234,7 @@ msgid ""
 "incomplete."
 msgstr ""
 "Entpacken und starten von Skripten nur bei verifizierten Jobs. Wenn "
-"ausgeschaltet werden alle Jobs als vollständig markiert, selbst wenn sie "
+"ausgeschaltet, werden alle Jobs als vollständig markiert, selbst wenn sie "
 "unvollständig sind."
 
 #: sabnzbd/skintext.py
@@ -3296,7 +3309,7 @@ msgstr "Aktion bei ungewollter Dateienendung"
 
 #: sabnzbd/skintext.py
 msgid "Action when an unwanted extension is detected"
-msgstr "Aktion bei ungewollter Dateienendung"
+msgstr "Aktion bei ungewollter Dateiendung"
 
 #: sabnzbd/skintext.py
 msgid "Unwanted extensions"
@@ -3304,11 +3317,11 @@ msgstr "Ungewollte Dateiendungen"
 
 #: sabnzbd/skintext.py
 msgid "Blacklist"
-msgstr "Blacklist"
+msgstr "Sperrliste"
 
 #: sabnzbd/skintext.py
 msgid "Whitelist"
-msgstr "Whitelist"
+msgstr "Erlaubtliste"
 
 #: sabnzbd/skintext.py
 msgid ""
@@ -3316,7 +3329,7 @@ msgid ""
 " <b>exe, com</b>"
 msgstr ""
 "Modus auswählen, und alle (nicht-)erwünschten Erweiterungen auflisten. Zum "
-"Beispiel : <b>exe</b> oder <b>exe, com</b>"
+"Beispiel: <b>exe</b> oder <b>exe, com</b>"
 
 #: sabnzbd/skintext.py
 msgid "Enable SFV-based checks"
@@ -3407,6 +3420,8 @@ msgstr ""
 #: sabnzbd/skintext.py
 msgid "The queue will resort every 30 seconds if % downloaded is selected."
 msgstr ""
+"Die Warteschlange wird alle 30 Sekunden neu sortiert, wenn % "
+"heruntergeladen, ausgewählt ist."
 
 #: sabnzbd/skintext.py
 msgid "Propagation delay"
@@ -3444,11 +3459,11 @@ msgstr "Leerzeichen in Ordnernamen durch Unterstriche ersetzen."
 
 #: sabnzbd/skintext.py
 msgid "Replace underscores in folder name"
-msgstr ""
+msgstr "Ersetze Unterstriche in Ordnernamen"
 
 #: sabnzbd/skintext.py
 msgid "Replace underscores with dots in folder names."
-msgstr ""
+msgstr "Ersetze Unterstriche mit Punkte in Ordnernamen."
 
 #: sabnzbd/skintext.py
 msgid "Replace dots in Foldername"
@@ -3516,7 +3531,7 @@ msgid ""
 "Additionally, attempts to set the correct file extension based on the file "
 "signature if the extension is not present or meaningless."
 msgstr ""
-"Zusätzlich wird versucht die korrekte Dateierweiterung mithilfe der "
+"Zusätzlich wird versucht, die korrekte Dateierweiterung mithilfe der "
 "Dateisignatur zu ermitteln, falls noch keine Dateierweiterung vorhanden, "
 "oder sie sinnlos sein sollte."
 
@@ -3693,6 +3708,9 @@ msgid ""
 "optionally follow with K,M,G.<br />Warn when it reaches 0, checked every few"
 " minutes."
 msgstr ""
+"Kontingent für dieses Konto, gezählt ab dem Zeitpunkt, an dem es festgelegt "
+"wird. In Bytes, optional gefolgt von K, M, G.<br />Warne, wenn es 0 "
+"erreicht, wird alle paar Minuten überprüft."
 
 #. Server's retention time in days
 #: sabnzbd/skintext.py
@@ -3741,15 +3759,15 @@ msgstr "0 ist die höchste, 99 die niedrigste Priorität"
 #. Server required tickbox
 #: sabnzbd/skintext.py
 msgid "Required"
-msgstr "Benötigt"
+msgstr "Erforderlich"
 
 #: sabnzbd/skintext.py
 msgid ""
 "In case of connection failures, the download queue will be paused for a few "
 "minutes instead of skipping this server"
 msgstr ""
-"Im Fall von Verbindungsausfällen wird die Downloadwarteschlange für ein paar"
-" Minuten pausiert, statt diesen Server zu überspringen"
+"Im Fall von Verbindungsausfällen wird die Download-Warteschlange für ein "
+"paar Minuten pausiert, anstatt diesen Server zu überspringen"
 
 #. Server optional tickbox
 #: sabnzbd/skintext.py
@@ -3950,7 +3968,7 @@ msgid ""
 "If only the <em>Default</em> category is selected, notifications are enabled"
 " for jobs in all categories."
 msgstr ""
-"Wenn nur die <em>Standart</em> Kategorie ausgewählt ist werden die "
+"Wenn nur die <em>Standard</em>-Kategorie ausgewählt ist, werden die "
 "Benachrichtigungen für Jobs in allen Kategorien aktiviert. "
 
 #: sabnzbd/skintext.py
@@ -4070,7 +4088,7 @@ msgstr "Prowl-Benachrichtigungen aktivieren"
 #. Prowl settings
 #: sabnzbd/skintext.py
 msgid "Requires a Prowl account"
-msgstr "Benötigt einen Prowl-Account"
+msgstr "Erfordert ein Prowl-Konto"
 
 #. Prowl settings
 #: sabnzbd/skintext.py
@@ -4095,17 +4113,17 @@ msgstr "Pushover-Benachrichtungen aktivieren"
 #. Pushoversettings
 #: sabnzbd/skintext.py
 msgid "Requires a Pushover account"
-msgstr "Benötigt einen Pushover-Account"
+msgstr "Benötigt einen Pushover-Konto"
 
 #. Pushover settings
 #: sabnzbd/skintext.py
 msgid "Application Token"
-msgstr "Applikationstoken"
+msgstr "Anwendungs-Token"
 
 #. Pushover settings
 #: sabnzbd/skintext.py
 msgid "Application token (required)"
-msgstr "Applikationstoken (benötigt)"
+msgstr "Anwendungs-Token (erforderlich)"
 
 #. Pushover settings
 #: sabnzbd/skintext.py
@@ -4115,7 +4133,7 @@ msgstr "Benutzer-Schlüssel"
 #. Pushover settings
 #: sabnzbd/skintext.py
 msgid "User Key (required)"
-msgstr "Benutzer-Schlüssel (benötigt)"
+msgstr "Benutzer-Schlüssel (erforderlich)"
 
 #. Pushover settings
 #: sabnzbd/skintext.py
@@ -4134,7 +4152,8 @@ msgstr "Notfall Wiederanlauf"
 
 #: sabnzbd/skintext.py
 msgid "How often (in seconds) the same notification will be sent"
-msgstr "Wie oft die selbe benachrichtigung (in Sekunden) geschickt wird."
+msgstr ""
+"Wie oft dieselbe Benachrichtigung (in Sekunden) geschickt werden soll."
 
 #. Pushover settings
 #: sabnzbd/skintext.py
@@ -4144,7 +4163,7 @@ msgstr "Notfall Verfall"
 #: sabnzbd/skintext.py
 msgid "How many seconds your notification will continue to be retried"
 msgstr ""
-"Wieviele Sekunden soll versucht werden deine Nachricht erneut zu versenden"
+"Wie viele Sekunden soll versucht werden die Nachricht erneut zu versenden"
 
 #. Header for Pushbullet notification section
 #: sabnzbd/skintext.py
@@ -4159,17 +4178,17 @@ msgstr "Pushbullet-Benachrichtigungen aktivieren"
 #. Pushbulletsettings
 #: sabnzbd/skintext.py
 msgid "Requires a Pushbullet account"
-msgstr "Benötigt einen Pushbullet-Account"
+msgstr "Erfordert ein Pushbullet-Konto"
 
 #. Pushbullet settings
 #: sabnzbd/skintext.py
 msgid "Personal API key"
-msgstr "Persönlicher API-Key"
+msgstr "Persönlicher API-Schlüssel"
 
 #. Pushbullet settings
 #: sabnzbd/skintext.py
 msgid "Your personal Pushbullet API key (required)"
-msgstr "Dein Pushbullet API-Key (benötigt)"
+msgstr "Dein Pushbullet API-Schlüssel (erforderlich)"
 
 #. Pushbullet settings
 #: sabnzbd/skintext.py
@@ -4445,23 +4464,23 @@ msgstr "Ergebnis"
 
 #: sabnzbd/skintext.py
 msgid "Any property"
-msgstr ""
+msgstr "Jede Eigenschaft"
 
 #: sabnzbd/skintext.py
 msgid "property"
-msgstr ""
+msgstr "Eigenschaft"
 
 #: sabnzbd/skintext.py
 msgid "GuessIt Property"
-msgstr "GuessIt Property"
+msgstr "GuessIt Eigenschaft"
 
 #: sabnzbd/skintext.py
 msgid "GuessIt.Property"
-msgstr "GuessIt.Property"
+msgstr "GuessIt.Eigenschaft"
 
 #: sabnzbd/skintext.py
 msgid "GuessIt_Property"
-msgstr "GuessIt_Property"
+msgstr "GuessIt_Eigenschaft"
 
 #: sabnzbd/skintext.py
 msgid ""
@@ -4568,11 +4587,11 @@ msgstr "Datumsformat"
 
 #: sabnzbd/skintext.py
 msgid "Extra queue columns"
-msgstr "Weitere Warteschlangen Spalten"
+msgstr "Weitere Spalten bei der Warteschlange"
 
 #: sabnzbd/skintext.py
 msgid "Extra history columns"
-msgstr "Weitere Verlaufspalten"
+msgstr "Weitere Spalten bei der Verlaufsliste"
 
 #: sabnzbd/skintext.py
 msgid "page"
@@ -4700,7 +4719,7 @@ msgstr "Löschen von Verlaufeinträgen bestätigen"
 
 #: sabnzbd/skintext.py
 msgid "Keyboard shortcuts"
-msgstr ""
+msgstr "Tastaturkürzel"
 
 #: sabnzbd/skintext.py
 msgid "How long or untill when do you want to pause? (in English!)"
@@ -4728,7 +4747,7 @@ msgstr ""
 
 #: sabnzbd/skintext.py
 msgid "Sort by % downloaded <small>Most&rarr;Least</small>"
-msgstr ""
+msgstr "Sortiere nach % heruntergeladen <small>Viel&rarr;Wenig</small>"
 
 #: sabnzbd/skintext.py
 msgid "Sort by Age <small>Oldest&rarr;Newest</small>"
@@ -4862,7 +4881,7 @@ msgstr "Assistenten starten"
 
 #: sabnzbd/skintext.py
 msgid "Restore backup"
-msgstr ""
+msgstr "Backup wiederherstellen"
 
 #: sabnzbd/skintext.py
 msgid ""
