--- a/po/main/nl.po
+++ b/po/main/nl.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Rik Brouwer, 2022
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.7.0Beta1\n"
@@ -2497,7 +2497,7 @@ msgstr "Hardeschijf"
 
 #: sabnzbd/skintext.py
 msgid "System load"
-msgstr ""
+msgstr "Systeembelasting"
 
 #. Do not translate Pystone
 #: sabnzbd/skintext.py
