--- a/po/main/de.po
+++ b/po/main/de.po
@@ -5,19 +5,19 @@
 # Translators:
 # C E <githubce@eiselt.ch>, 2020
 # Nikolai Bohl <n.kay01@gmail.com>, 2020
+# reloxx13 <reloxx@interia.pl>, 2021
 # Ben Hecht <benjamin.hecht@me.com>, 2021
 # Manuel C. Senn, 2021
 # Andreas Kames, 2021
 # Simon W., 2021
 # Nils Briggen, 2022
 # Safihre <safihre@sabnzbd.org>, 2022
-# reloxx13 <reloxx@interia.pl>, 2022
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
 "PO-Revision-Date: 2020-06-27 15:49+0000\n"
-"Last-Translator: reloxx13 <reloxx@interia.pl>, 2022\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>, 2022\n"
 "Language-Team: German (https://www.transifex.com/sabnzbd/teams/111101/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -349,7 +349,7 @@ msgstr "Kann keine Sicherungsdatei erstellen für %s"
 #. Warning message
 #: sabnzbd/config.py
 msgid "Could not restore backup"
-msgstr "Backup konnte nicht wiederhergestellt werden"
+msgstr ""
 
 #. Error message
 #: sabnzbd/config.py
