--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 3.7.1 Release Candidate 1
+Release Notes - SABnzbd 3.7.1 Release Candidate 2
 =========================================================
 
 ## Bugfixes and changes since 3.7.0
@@ -8,6 +8,7 @@ Release Notes - SABnzbd 3.7.1 Release Candidate 1
 - Priority list in `Add NZB`-window was missing `Paused` priority.
 - Keyboard shortcuts did not work if not in Tabbed-mode.
 - Keyboard shortcut `S` did not reload status information.
+- In `history` API-call the `stage_log` could be empty.
 - Using the `-` character broke the queue/history search.
 - Improved detection and handling of stuck jobs.
 
