--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 3.7.1 Release Candidate 2
+Release Notes - SABnzbd 3.7.1
 =========================================================
 
 ## Bugfixes and changes since 3.7.0
