--- a/po/main/cs.po
+++ b/po/main/cs.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Pavel C <quoing_transifex@mess.cz>, 2021
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -453,8 +453,8 @@ msgstr ""
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "Příliš mnoho spojení k serveru %s"
+msgid "Too many connections to server %s [%s]"
+msgstr "Příliš mnoho spojení k serveru %s [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -464,8 +464,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Přihlášení k serveru %s se nezdařilo"
+msgid "Failed login for server %s [%s]"
+msgstr "Přihlášení k serveru %s se nezdařilo [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
