--- a/po/main/da.po
+++ b/po/main/da.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -451,8 +451,8 @@ msgstr "Det lykkedes ikke at initialisere %s@%s med begrundelse %s"
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "Alt for mange forbindelser til serveren %s"
+msgid "Too many connections to server %s [%s]"
+msgstr "Alt for mange forbindelser til serveren %s [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -462,8 +462,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Det lykkedes ikke at logge på serveren %s"
+msgid "Failed login for server %s [%s]"
+msgstr "Det lykkedes ikke at logge på serveren %s [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
