--- a/po/main/es.po
+++ b/po/main/es.po
@@ -1,12 +1,12 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Ester Molla Aragones <moarages@gmail.com>, 2020
 # 1024mb <angelb2203@gmail.com>, 2020
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -471,8 +471,8 @@ msgstr "Error al inicializar %s@%s con la razón: %s"
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "Demasiadas conexiones con el servidor %s"
+msgid "Too many connections to server %s [%s]"
+msgstr "Demasiadas conexiones con el servidor %s [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -482,8 +482,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Registraccion fallo para servidor %s"
+msgid "Failed login for server %s [%s]"
+msgstr "Registraccion fallo para servidor %s [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
