--- a/po/main/fi.po
+++ b/po/main/fi.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -447,8 +447,8 @@ msgstr "Alustaminen epäonnistui kohteessa %s@%s syy: %s"
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "Liikaa yhteyksiä palvelimelle %s"
+msgid "Too many connections to server %s [%s]"
+msgstr "Liikaa yhteyksiä palvelimelle %s [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -458,8 +458,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Kirjautuminen palvelimelle %s epäonnistui"
+msgid "Failed login for server %s [%s]"
+msgstr "Kirjautuminen palvelimelle %s epäonnistui [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
