--- a/po/main/nb.po
+++ b/po/main/nb.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -443,8 +443,8 @@ msgstr "Feilet å starte %s@%s grunnet: %s"
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "For mange tilkoblinger til server %s"
+msgid "Too many connections to server %s [%s]"
+msgstr "For mange tilkoblinger til server %s [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -454,8 +454,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Kunne ikke logge inn på server %s"
+msgid "Failed login for server %s [%s]"
+msgstr "Kunne ikke logge inn på server %s [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
