--- a/po/main/pl.po
+++ b/po/main/pl.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -440,8 +440,8 @@ msgstr "Błąd podczas inicjalizacji %s@%s: %s"
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "Zbyt wiele połączeń do serwera %s"
+msgid "Too many connections to server %s [%s]"
+msgstr "Zbyt wiele połączeń do serwera %s [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -451,8 +451,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Błąd logowania do serwera %s"
+msgid "Failed login for server %s [%s]"
+msgstr "Błąd logowania do serwera %s [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
