--- a/po/main/ru.po
+++ b/po/main/ru.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -442,7 +442,7 @@ msgstr ""
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
+msgid "Too many connections to server %s [%s]"
 msgstr ""
 
 #: sabnzbd/downloader.py
@@ -453,8 +453,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Ошибка входа на сервер %s"
+msgid "Failed login for server %s [%s]"
+msgstr "Ошибка входа на сервер %s [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
