--- a/po/main/sr.po
+++ b/po/main/sr.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -441,8 +441,8 @@ msgstr "Neuspešna inicijalizacija %s@%s iz razloga: %s"
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "Previše konekcija ka serveru %s"
+msgid "Too many connections to server %s [%s]"
+msgstr "Previše konekcija ka serveru %s [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -452,8 +452,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "Неуспешно пријављивање на сервер %s"
+msgid "Failed login for server %s [%s]"
+msgstr "Неуспешно пријављивање на сервер %s [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
