--- a/po/main/zh_CN.po
+++ b/po/main/zh_CN.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -438,8 +438,8 @@ msgstr "无法初始化 %s@%s，原因为: %s"
 
 #. Warning message
 #: sabnzbd/downloader.py
-msgid "Too many connections to server %s"
-msgstr "服务器 %s 连接数过多"
+msgid "Too many connections to server %s [%s]"
+msgstr "服务器 %s 连接数过多 [%s]"
 
 #: sabnzbd/downloader.py
 msgid ""
@@ -449,8 +449,8 @@ msgstr ""
 
 #. Error message
 #: sabnzbd/downloader.py
-msgid "Failed login for server %s"
-msgstr "无法登录服务器 %s"
+msgid "Failed login for server %s [%s]"
+msgstr "无法登录服务器 %s [%s]"
 
 #. Error message
 #: sabnzbd/downloader.py
